# datasette-backup

./: .gitignore  pyproject.toml  setup.py
datasette_backup/: __init__.py
tests/: test_backup.py
